syntax = "proto3";	// proto3 ���� ���

package Protocol; 
option csharp_namespace = "Google.Protobuf.Protocol"; // ���ӽ����̽� ���� ��

//import public "Enum.proto";
//import public "Struct.proto";

enum MsgId {
	S_ENTER = 0;
	C_MAKEROOM = 1;
	S_MAKEROOM = 2;
	C_ENTERROOM = 3;
	S_ENTERROOM = 4;
	S_NEWENTERROOM = 5;
	C_LEAVEROOM = 6;
	C_SEARCHROOM = 7;
	S_SENDROOMLIST = 8;
}

enum ChessPiece
{
	Pawn = 0;
	Knight = 1;
    Bishop = 2;
	Rook = 3;
    Queen = 4;
	King = 5;
}

message S_Enter
{
	int32 userId = 1;
}
message C_Makeroom
{
	int32 userId = 1;
	string roomName = 2;
}
message S_Makeroom
{
	string roomId = 1;
}
message C_Enterroom
{
	int32 userId = 1;
	string roomId = 2;
}
message S_Enterroom
{
	bool enter = 1;
	repeated int32 otherPlayers = 2;
}
message S_Newenterroom
{
	int32 userId = 1;
}
message C_Leaveroom
{
	int32 userId = 1;

}
message C_Searchroom
{

}
message S_Sendroomlist
{

}
message RoomSetting{
	int32 maxPlayer = 1;
	bool isSecret = 2;
}